Add: Article snippet from Amnesty, embedded video, to what it should not be

--- a/what-it-should-not-be.html
+++ b/what-it-should-not-be.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">How you can help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#glossary">Glossary of terms</a>
+                    <a class="nav-link" href="index.html#glossary">Glossary of terms</a>
                 </li>
             </ul>
         </div>
@@ -66,12 +66,81 @@
 
     <!-- Main -->
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>What it should not be</h2>
-                    <p>Prevent is not about spying on people or criminalising communities. It is about supporting
-                        individuals who are vulnerable to radicalisation and protecting them from being drawn into
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mb-4">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">What it should not be</h5>
+                                <p>Prevent is not about spying on people or criminalising communities. It is about
+                                    supporting
+                                    individuals who are vulnerable to radicalisation and protecting them from being
+                                    drawn
+                                    into
+                                    extremism. However, it is not without criticism, as some believe that is limits
+                                    freedom of expression and freedom of association, violating fundamental human
+                                    rights. Below are some quotes from amnesty
+                                    international UK and a short video they have produced.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">UK: Shawcross review of Prevent is 'deeply prejudiced and has no
+                                    legitimacy'</h5>
+                                <p>Ilyas Nagdee, Amnesty International UK’s Racial Justice Director, said:</p>
+                                <p>“This review is riddled with biased thinking, errors, and plain anti-Muslim
+                                    prejudice -
+                                    frankly,
+                                    the review has no legitimacy.</p>
+
+                                <p>“William Shawcross’ history of bigoted comments on Muslims and Islam should have
+                                    precluded
+                                    his
+                                    involvement in this ill-starred review in the first place.</p>
+
+                                <p>“There’s mounting evidence that Prevent has specifically targeted Muslim
+                                    communities and
+                                    activists fighting for social justice and a host of crucial international issues
+                                    –
+                                    including
+                                    topics like the climate crisis and the oppression of Palestinians.</p>
+
+                                <p>“There is growing evidence that Prevent is having disastrous consequences for
+                                    many
+                                    people;
+                                    eroding freedom of expression, clamping down on activism, creating a compliant
+                                    generation
+                                    and
+                                    impacting on individual rights enshrined in law.</p>
+
+                                <p>“A proper independent review of Prevent should have looked at the host of human
+                                    rights
+                                    violations
+                                    that the programme has led to - but these have largely been passed over in
+                                    silence."</p>
+                                <a href="https://www.amnesty.org.uk/press-releases/uk-shawcross-review-prevent-deeply-prejudiced-and-has-no-legitimacy"
+                                    target="_blank">Read more</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">What is Prevent? A short video by Amnesty International UK</h5>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/Po03rnigOJU?si=pDmNB550GQsnF_RX"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+        </section>
+
     </main>
     <!-- Footer -->
     <footer class="bg-light text-center text-lg-start">
