--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave
-            this page quickly</a>
+            this page quickly<i class="fa-brands fa-youtube"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -214,6 +214,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
+    <script src="https://kit.fontawesome.com/956711f51a.js" crossorigin="anonymous"></script>
 </body>
 
 
