Fix nav bar not linking between pages

--- a/what-it-should-not-be.html
+++ b/what-it-should-not-be.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">How you can help</a>
+                    <a class="nav-link" href="how-you-can-help.html">How you can help</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html#glossary">Glossary of terms</a>
