--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
 
     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -70,9 +77,9 @@
         <!-- Outline -->
         <section class="container">
             <div class="row">
+                <h1>What is it and how can we help?</h1>
                 <div class="col-md-6 mb-4 d-flex align-items-stretch">
                     <div class="card shadow">
-                        <!-- <img class="card-img-top" src="assets/images/what.jpg" alt="What is prevent"> -->
                         <div class="card-body">
                             <h5 class="card-title">What it is</h5>
                             <p>Prevent is the name given by the UK government to the safeguarding strategy designed to
@@ -95,12 +102,12 @@
                                 make you look bad, and if it turns out that the person you were worried about is not
                                 actually at
                                 risk, it should not cause them any issues.</p>
+                            <a href="what-it-is.html" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 mb-4 d-flex align-items-stretch">
                     <div class="card shadow">
-                        <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
                             <h5 class="card-title">How you can help</h5>
                             <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned
@@ -112,12 +119,12 @@
                                 knowing who to talk to about your concerns are all ways you can help preventing horrible
                                 things
                                 happening.</p>
+                            <a href="how-you-can-help.html" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 mb-4 d-flex align-items-stretch">
                     <div class="card shadow">
-                        <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
                             <h5 class="card-title">What it should not be</h5>
                             <p>Despite the best of intentions, Prevent is not without controversy. There have been
@@ -127,13 +134,14 @@
                                 Some people think that it goes too far, and that some of the groups labelled as
                                 extremist should
                                 not be.</p>
+                            <a href="what-it-should-not-be.html" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </div>
         </section>
         <!-- Glossary -->
         <section class="container">
-            <h1><a id="glossary"></h1>
+            <h1><a id="glossary">Glossary</h1>
             <div class="row">
                 <div class="col-lg-3 mb-4 d-flex align-items-stretch">
                     <div class="card shadow">
