--- a/what-it-should-not-be.html
+++ b/what-it-should-not-be.html
@@ -127,11 +127,11 @@
                         </div>
 
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 d-flex align-items-stretch">
                         <div class="card shadow">
                             <div class="card-body">
                                 <h5 class="card-title">What is Prevent? A short video by Amnesty International UK</h5>
-                                <iframe width="560" height="315"
+                                <iframe width="100%" height="80%"
                                     src="https://www.youtube.com/embed/Po03rnigOJU?si=pDmNB550GQsnF_RX"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
