--- a/how-you-can-help.html
+++ b/how-you-can-help.html
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave
             this page
-            quickly</a>
+            quickly<i class="fa-brands fa-youtube"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
