Add: fontjoy script to all pages to make youtube icon load, remove dead links from footer

--- a/how-you-can-help.html
+++ b/how-you-can-help.html
@@ -59,7 +59,8 @@
         <div class="container">
             <div class="hero-text">
                 <h1>How you can help</h1>
-                <p class="lead">Everyone can help prevent radicalisation and extremism. Below are some warning signs to watch out for</p>
+                <p class="lead">Everyone can help prevent radicalisation and extremism. Below are some warning signs to
+                    watch out for</p>
             </div>
         </div>
     </section>
@@ -272,7 +273,8 @@
                                             danger, contact your local police department or emergency services.</li>
                                         <li><strong>Prevent website:</strong> You can follow this link for advice and
                                             support on how to help someone who may be at risk of
-                                            radicalisation. <a href="https://act.campaign.gov.uk/">Action Counters Terrorism</a></li>
+                                            radicalisation. <a href="https://act.campaign.gov.uk/">Action Counters
+                                                Terrorism</a></li>
                                         <li><strong>Community leaders:</strong> Reach out to community leaders,
                                             religious figures, or social workers who may be able to provide guidance and
                                             support.</li>
@@ -296,17 +298,7 @@
                     <p>Safeguarding in a dangerous world.</p>
                 </div>
                 <div class="col-4">
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="#!" class="text-dark">Privacy Policy</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-dark">Terms of Service</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-4">
-                    <p>© 2023 Prevent Project</p>
+                    <p>© 2024 Philip Kershaw</p>
                 </div>
             </div>
         </div>
@@ -316,6 +308,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
+
+    <script src="https://kit.fontawesome.com/956711f51a.js" crossorigin="anonymous"></script>
 </body>
 
 
