--- a/index.html
+++ b/index.html
@@ -202,17 +202,7 @@
                     <p>Safeguarding in a dangerous world.</p>
                 </div>
                 <div class="col-4">
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="#!" class="text-dark">Privacy Policy</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-dark">Terms of Service</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-4">
-                    <p>© 2023 Prevent Project</p>
+                    <p>© Philip Kershaw</p>
                 </div>
             </div>
         </div>
