--- a/what-it-is.html
+++ b/what-it-is.html
@@ -73,21 +73,21 @@
             <div class="container text-center">
                 <h1>Prevent's Objectives</h1>
                 <div class="objectives">
-                        <div class="card shadow">
-                            <div class="card-body">Tackle the ideological causes
-                                of terrorism and extremism</div>
-                        </div>
-                        <div class="card shadow">
-                            <div class="card-body">Intervene early to support people
-                                susceptible to radicalisation</div>
-                        </div>
-                        <div class="card shadow">
-                            <div class="card-body">Enable people who have already
-                                engaged in terrorism to disengage
-                                and rehabilitate </div>
-                        </div>
+                    <div class="card shadow">
+                        <div class="card-body">Tackle the ideological causes
+                            of terrorism and extremism</div>
+                    </div>
+                    <div class="card shadow">
+                        <div class="card-body">Intervene early to support people
+                            susceptible to radicalisation</div>
+                    </div>
+                    <div class="card shadow">
+                        <div class="card-body">Enable people who have already
+                            engaged in terrorism to disengage
+                            and rehabilitate </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- The Prevent Duty -->
         <section>
@@ -280,17 +280,7 @@
                     <p>Safeguarding in a dangerous world.</p>
                 </div>
                 <div class="col-4">
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="#!" class="text-dark">Privacy Policy</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-dark">Terms of Service</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-4">
-                    <p>© 2023 Prevent Project</p>
+                    <p>© 2024 Philip Kershaw</p>
                 </div>
             </div>
         </div>
@@ -300,6 +290,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
+
+    <script src="https://kit.fontawesome.com/956711f51a.js" crossorigin="anonymous"></script>
 </body>
 
 
