--- a/what-it-should-not-be.html
+++ b/what-it-should-not-be.html
@@ -151,16 +151,6 @@
                     <p>Safeguarding in a dangerous world.</p>
                 </div>
                 <div class="col-4">
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="#!" class="text-dark">Privacy Policy</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-dark">Terms of Service</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-4">
                     <p>© 2023 Prevent Project</p>
                 </div>
             </div>
@@ -171,6 +161,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
+        
+    <script src="https://kit.fontawesome.com/956711f51a.js" crossorigin="anonymous"></script>
 </body>
 
 
