--- a/what-it-should-not-be.html
+++ b/what-it-should-not-be.html
@@ -131,7 +131,7 @@
                         <div class="card shadow">
                             <div class="card-body">
                                 <h5 class="card-title">What is Prevent? A short video by Amnesty International UK</h5>
-                                <iframe width="100%" height="80%"
+                                <iframe width="100%" height="300px"
                                     src="https://www.youtube.com/embed/Po03rnigOJU?si=pDmNB550GQsnF_RX"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -151,7 +151,7 @@
                     <p>Safeguarding in a dangerous world.</p>
                 </div>
                 <div class="col-4">
-                    <p>© 2023 Prevent Project</p>
+                    <p>Philip Kershaw</p>
                 </div>
             </div>
         </div>
