--- a/how-you-can-help.html
+++ b/how-you-can-help.html
@@ -7,11 +7,11 @@
     <title>Prevent: Safeguarding in a dangerous world</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg">
+    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 
     <!-- Fonts -->
 
@@ -21,39 +21,40 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
-<!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave
-            this page
-            quickly<i class="fa-brands fa-youtube"></i></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="what-it-is.html">What it is</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="how-you-can-help.html">How you can help</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#glossary">Glossary of terms</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <body>
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link"
+                href="https://www.youtube.com/">Leave
+                this page
+                quickly<i class="fa-brands fa-youtube"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="what-it-is.html">What it is</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="how-you-can-help.html">How you can help</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#glossary">Glossary of terms</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- Hero -->
     <section class="hero text-center d-flex align-items-center justify-content-center">
         <div class="container">
@@ -287,6 +288,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
     <!-- Footer -->
