--- a/index.html
+++ b/index.html
@@ -28,38 +28,40 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
-<!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave
-            this page quickly<i class="fa-brands fa-youtube"></i></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="what-it-is.html">What it is</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="how-you-can-help.html">How you can help</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#glossary">Glossary of terms</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <body>
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link"
+                href="https://www.youtube.com/">Leave
+                this page quickly<i class="fa-brands fa-youtube"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="what-it-is.html">What it is</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="how-you-can-help.html">How you can help</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#glossary">Glossary of terms</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- Hero -->
     <section class="hero text-center d-flex align-items-center justify-content-center">
         <div class="container">
