--- a/what-it-should-not-be.html
+++ b/what-it-should-not-be.html
@@ -7,11 +7,11 @@
     <title>Prevent: Safeguarding in a dangerous world</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg">
+    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 
     <!-- Fonts -->
 
@@ -21,39 +21,41 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
-<!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave
-            this page
-            quickly<i class="fa-brands fa-youtube"></i></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="what-it-is.html">What it is</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="how-you-can-help.html">How you can help</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#glossary">Glossary of terms</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+
 
 <body>
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link"
+                href="https://www.youtube.com/">Leave
+                this page
+                quickly<i class="fa-brands fa-youtube"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="what-it-is.html">What it is</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="how-you-can-help.html">How you can help</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#glossary">Glossary of terms</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- Hero -->
     <section class="hero text-center d-flex align-items-center justify-content-center">
         <div class="container">
@@ -131,7 +133,7 @@
                         <div class="card shadow">
                             <div class="card-body">
                                 <h5 class="card-title">What is Prevent? A short video by Amnesty International UK</h5>
-                                <iframe width="100%" height="300px"
+                                <iframe width ="100%" height="400"
                                     src="https://www.youtube.com/embed/Po03rnigOJU?si=pDmNB550GQsnF_RX"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -139,6 +141,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
         </section>
 
     </main>
@@ -161,7 +165,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
-        
+
     <script src="https://kit.fontawesome.com/956711f51a.js" crossorigin="anonymous"></script>
 </body>
 
