--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Prevent: Safeguarding in a dangerous world</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg">
+    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,6 @@
             </div>
         </div>
     </nav>
-
     <!-- Hero -->
     <section class="hero text-center d-flex align-items-center justify-content-center">
         <div class="container">
@@ -140,10 +139,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- Glossary -->
         <section class="container">
-            <h1><a id="glossary">Glossary</h1>
+            <h1><a id="glossary">Glossary</a></h1>
             <div class="row">
                 <div class="col-lg-3 mb-4 d-flex align-items-stretch">
                     <div class="card shadow">
@@ -193,6 +193,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
     <!-- Footer -->
